yeah that was pretty dumb of it